This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

10-Jul-2008 (Fuchur & Gnomi)
  - (prolang.y) Incomplete variable clearance after an inner block
       (Bug #537).

10-Jul-2008 (Gnomi)
  - (pkg-sqlite.c, interpret.c, interpret.h) SQLite pragma statements
       are now possible but privileged.
  - (mstrings.c) mstr_n_str() now finds an empty string at the end
       of an input string (Bug #536).

09-Jul-2008 (Fuchur)
  - (object.c) Use xalloc instead of alloca for allocating the parse buffer
       in f_restore_value(). (Bug #532)

07-Jul-2008 (Zesstra)
  - (mregex.c, pkg-pcre.h, config.h.in, autoconf/configure.in)
       Introduced the compile-time constant LD_PCRE_RECURSION_LIMIT and code
       for limiting the amount of recursions in the PCRE package. The purpose
       is to prevent crashes from stack overflows, as the PCRE package may
       recurse heavily. Default is 3000 recursions for systems with about 8MB
       stack size per process. (Bug #524)

04-Jul-2008 (Zesstra)
  - (test/t-0000524.c) Added a test for Bug #524

03-Jul-2008 (Gnomi)
  - (test/*) Added a testsuite and included existing test cases therein.
  - (test/t-0000532.c) Added a simple test for Bug #532 (Zesstra)

01-Jul-2008 (Gnomi)
  - (comm.c) input_to could leak its parameters when it failed (Bug #486).
  - (comm.c) Corrected the argument number in input_to error messages.
  - (driver.h) Corrected the check for SQLITE3_USES_PTHREADS when
       disabling SBRK_OK.
  - (ed.c) The 'r' command leaked the filename (Bug #488).

31-Jun-2008 (Zesstra)
  - (configure.in) Fix configure.in to work with autoconf 2.61 and later.
      (patch from Fuchur, fixes bugs #541, #542)

30-Jun-2008 (Zesstra)
  - (efuns.c) Added actual array size to error message 'Illegal array size'
     in f_regexplode().
  - (hosts/GnuWin32/GnuWin32.h, hosts/GnuWin32/socket.h) 