@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+11-Jul-2008 (Gnomi)
+  - (files.c) write_file doesn't raise an error if the flag is set
+       and the file doesn't exist (Bug #512).
+
 10-Jul-2008 (Fuchur & Gnomi)
   - (prolang.y) Incomplete variable clearance after an inner block
        (Bug #537).
